# TFDL2_SDK

./: .gitignore  README  README.md  sync_to_github.sh
.devcontainer/: Dockerfile  devcontainer.json
AddonOps/: ApplyRope.cpp  ApplyRope3D.cpp  ApplyRopeDA3.cpp  CMakeLists.txt  CustomCommon.h  DetectionOutputs.cpp  LocateAnythingEmbedMerge.cpp  Normalize.cpp  PoseEncodingToCamera.cpp  Power.cpp  PriorBox.cpp  README.md  RMSNorm.cpp  RTSPStreamReader.cpp  RopePositionEmbedding.cpp  SDPAttentionKVCache.cpp  Space2Depth.cpp  SquaredReLUGate.cpp  bbox_util.cpp  bbox_util.h
ConvertTools/: README
ConvertTools/exe/: ConvertandQuant.sh  TFConvertor  runconfig.json
ConvertTools/python/: customop.py  onnx2tfdl.py  requirements.txt
ConvertTools/python/CustomOpConvort/: TransForm.py
ConvertTools/python/TFConvertor/: TFConvertor.py  __init__.py  onnxConvertor.py
ConvertTools/python/TFConvertor/Optimize/: Clip2ReLUX.py  ConvTransposeOp.py  MergeBatchnorm.py  MergeBert.py  MergeBiasAdd.py  MergeGeLU.py  MergeHardSigmoid.py  MergeHardSwish.py  MergeLayerNorm.py  MergeMaskSoftmax.py  MergeSwish.py  PrepareParam.py  SplitConv.py  replacedilationconv.py
ConvertTools/python/example/: yolo11_tfdl.py  yolo26_tfdl.py  yolov5_tfdl.py  yolov8_tfdl.py
Doc/: Model_Conversion_Skill.md  TFDL2_Practice_Guide.md
Doc/legacy/: API.md  Benchmark.md  ConfigReference.md  ModelAndQuantization.md  MultiThread.md  Operation.md  PythonAPI.md  TFCV.md  Tutorial.md  index.md
Doc/legacy/pics/: edit_img.py
Example/: mkimglist.sh
Example/Benchmark/: Benchmark.cpp  CMakeLists.txt  json11.cpp
Example/CityScape/: CMakeLists.txt  README  main.cpp  run.sh  runconfig.json
Example/Classification/: CMakeLists.txt  README  main.cpp  run.sh
Example/PythonDevelop/: example.ipynb
Example/rtspServer/: CMakeLists.txt  README  Run.sh  index.html  main.cpp
Example/yolov5/: CMakeLists.txt  ConvertandQuant.sh  README  main.cpp  run.sh
Python/: setup.py
Python/TFDL2/: Common.py  Op.py  TFCalibration.py  TFContext.py  TFDL2_PythonWrap.cpp  TFExcutor.py  TFTensor.py  __init__.py  utils.py
Python/TFDL2/include/: TFDL2_C_API.h  TFModule.h
include/: TFDL2_Common.h  TFLog.h
include/TFCV/: TFCV.h
