cmake_minimum_required(VERSION 3.2)
project(yolov5)

set(CMAKE_CXX_STANDARD 14)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../lib)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/CV_NPU10T)
add_executable(yolov5 main.cpp)
target_include_directories(yolov5 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
#target_link_directories(yolov5 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib)
#target_link_directories(yolov5 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/CV_NPU10T)
target_link_libraries(yolov5 TFDL2_LITE_C_API TFCV tfg tfgs tfdec mk_api)
